<resources>
    <string name="app_name">Task Timer</string>
    <string name="title_activity_register">registerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- SPLASH ACTIVITY -->
    <string name="splash_title">Never forget a test or assignment again</string>
    <string name="splash_button">Get Started</string>
    <string name="splash_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tempor scelerisque pellentesque quis dapibus sem amet natoque. Sed in justo, pellentesque pellentesque. Suspendisse scelerisque enim.</string>

    <!-- REGISTER ACTIVITY -->
    <string name="register_title">Welcome Aboard!</string>
    <string name="register_subtitle">Let\'s help you keep track of your tasks</string>
    <string name="register_footer">Already have an account? Sign in</string>

    <string name="register_name_placeholder">Enter your full name</string>
    <string name="register_email_placeholder">Enter your email</string>
    <string name="register_pass_placeholder">Enter password</string>
    <string name="register_pass_confirm_placeholder">Confirm Password</string>

    <string name="register_button">Register</string>
    <string name="register_button_google">Sign in with Google</string>

    <!-- LOGIN ACTIVITY -->
    <string name="login_title">Login</string>
    <string name="login_subtitle">Press login to continue</string>

    <string name="login_email_placeholder">Enter your email</string>
    <string name="login_pass_placeholder">Enter password</string>

    <string name="login_button">Login</string>

    <!-- MAIN ACTIVITY -->
    <string name="timer_swipe">Timer</string>
    <string name="task_time_default">0.00h</string>

    <!-- TIMER ACTIVITY -->
    <string name="task_swipe">Tasks</string>
    <string name="timer_default">00</string>
    <string name="timer_colon">:</string>

    <string name="button_start">Start</string>
    <string name="button_pause">Pause</string>
    <string name="button_reset">Reset</string>

    <string name="switch_text">Show Completed</string>

    <!-- TASK DIALOG -->
    <string name="dialog_title">Task title...</string>
    <string name="dialog_description">Task description...</string>
    <string name="group_prompt">Group</string>
    <string name="dialog_button">Confirm</string>

    <!-- SHARED PREFERENCES KEY -->
    <string name="timer_prefs">timerPrefs</string>
    <string name="save_time_prefs">saveTimePrefs</string>

    <!-- NOTIFICATION STRINGS -->
    <string name="new_notification">Create a new notification</string>

    <string name="channel_name">Timer End Channel</string>
    <string name="channel_description">This is the channel for the end of the timer</string>

</resources>